--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@ USEMARCON Change Log
 **************************
 version 2.00
 
-June 21 2007
+June 29 2007
 
 The National Library of Finland
 Ere Maijala
@@ -13,25 +13,29 @@ ere.maijala at helsinki.fi
 
 - Renewed the core scanner and parser. Parser is now built with bison 
   and converted to C++ by a perl script. Scanner is built with flex in
-  C++ mode.
-- Fixed conversion of full fields in field order mode
+  C++ mode. Building of them is currently not part of the regular build 
+  process.
+- Fixed conversion of full fields in field order mode.
 - Added NextSub($x, '>=1') and PreviousSub($x, '>=1') to handle subfield
-  occurrences better
+  occurrences better.
 - Added option to convert all subfield codes to lower case
-  (ConvertSubfieldCodesToLowercase=TRUE in [DEFAULT_STATES] section)
+  (ConvertSubfieldCodesToLowercase=TRUE in [DEFAULT_STATES] section).
 - Added possibility to use nonbreaking conditionals (just leave 'Then' 
   out from an 'If' clause. 
 - Added possibility to make USEMARCON always create a new field:
   500 | 500(New) | S
-- Fixed concatenation when converting a full field
-- Fixed using wildcards in subfield codes in field order mode
+- Fixed concatenation when converting a full field.
+- Fixed using wildcards in subfield codes in field order mode.
 - Added possibility to peek at a converted (output) field by prepending 
-  the tag code with % (e.g. If (%008/0-5/ = '123456') Then S)
+  the tag code with % (e.g. If (%008/0-5/ = '123456') Then S).
 - Added regexp support for \s, \S, \w, \W, \d, \D, \b and \B 
-  (escape \ in actual rules (e.g. \\s) 
+  (escape \ in actual rules (e.g. \\s). 
 - Fixed sorting of temporary fields to not lose data when using field 
   order.
-- Fixed wildcard handling when converting complete fields
+- Fixed wildcard handling when converting complete fields.
+- Cleaned up a lot of code and got rid of the huge temporary buffers in
+  ErrorHandler and other static buffers. Record or field size is no 
+  more limited.
 
 **************************
 **************************
