- Fixed a couple of possible crashes when rule processing encounters an   error. - Fixed a possible crash in MoveBefore/MoveAfter. - Added 001 field (if any) of the input record to the warning and   error messages. - Added writing of version number to the error log.

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,24 @@
 **************************
 **************************
+version 3.06
+
+March 11 2008
+
+The National Library of Finland
+Ere Maijala
+http://www.nationallibrary.fi/
+ere.maijala at helsinki.fi
+
+- Fixed a couple of possible crashes when rule processing encounters an 
+  error.
+- Fixed a possible crash in MoveBefore/MoveAfter.
+- Added 001 field (if any) of the input record to the warning and
+  error messages. 
+- Added writing of version number to the error log.
+
+
+**************************
+**************************
 version 3.05
 
 February 27 2008
