--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,7 @@
 **************************
 version 3.07
 
-March 18 2008
+April 4 2008
 
 The National Library of Finland
 Ere Maijala
@@ -11,6 +11,8 @@ ere.maijala at helsinki.fi
 
 - Fixed a possible crash when conversion was done in UTF-8 mode and 
   a record contained invalid characters.
+- Fixed a problem introduced in version 3.06 where e.g. 
+  From(ELast('nonexisting string')) would return the whole string.
 
 
 **************************
