--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,21 @@
 **************************
 **************************
+version 3.09
+
+May 14 2008
+
+The National Library of Finland
+Ere Maijala
+http://www.nationallibrary.fi/
+ere.maijala at helsinki.fi
+
+- Fixed while loops. They may not have run all expected iterations and
+  could lose the field contents.
+- Fixed a crash when trying to report an empty field. 
+
+
+**************************
+**************************
 version 3.08
 
 April 10 2008
@@ -14,7 +30,7 @@ ere.maijala at helsinki.fi
 - Fixed setting of record id in state manager overriding the flag of
   handling of linked fields.
 - Weakened comment designator // so that it won't take effect inside
-   a string.
+  a string.
 - Type and format attributes are written to XML record only if they are
   not empty. 
 
