--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,20 @@
 **************************
 **************************
+version 3.10
+
+June 13 2008
+
+The National Library of Finland
+Ere Maijala
+http://www.nationallibrary.fi/
+ere.maijala at helsinki.fi
+
+- Fixed RegReplace with the global flag. It misbehaved after the second
+  iteration.
+
+
+**************************
+**************************
 version 3.09
 
 May 21 2008
